GNOME Bugzilla – Bug 656797
gnect: Several themes use the wrong player names
Last modified: 2011-09-05 10:14:48 UTC
Colors listed for Player One and Player Two in Preferences aren't correct for several themes. As reported at https://bugs.launchpad.net/bugs/807574
Created attachment 194095 [details] [review] 0001-gnect-Use-the-correct-player-names-in-Preferences.patch
Jason, string freeze is in one week. Do you plan to land the patch or some other fix for this before then? (patch looks good to me. Maybe circle/cross is easier for translators than O/X?)
I now have git commit privileges so I can apply this when approved. The original bug report said circle/cross. Is that what I should use?
Hi, just a friendly ping since Beta 2/String Freeze is coming up right after the weekend.
I would say circle/cross. Feel free to commit with that change.