gnect: Use the correct player names in Preferences

Colors listed for Player One and Player Two in Preferences weren't
correct for several themes.

https://bugzilla.gnome.org/show_bug.cgi?id=656797